css and js added

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <ul>
-        <li ng-repeat = "Anbieter in Caterer"></li>
+        <li ng-repeat = "Anbieter in Caterer">{{Anbieter.kitchen}}</li>
     </ul>
 
 </div><!-- /.container -->
