--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery/min.js"><\/script>')</script>
+<script src="lib/jquery/dist/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
 <script src="lib/angular.min.js"></script>
 <script src="app/app.js"></script>
 
