--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 <script src="lib/angular-route.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/controller/CatererListController.js"></script>
+<script src="app/controller/LocationListController.js"></script>
 
 </body>
 </html>
