--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
 <script src="app/app.js"></script>
 <script src="app/controller/CatererListController.js"></script>
 <script src="app/controller/LocationListController.js"></script>
+<script src="app/controller/LocationCreateController.js"></script>
 
 </body>
 </html>
