refactoring for minification and splitting in multiple modules for easier adding and deleting modules.
Caterer module added.
empty Location module added.

--- a/public/index2.html
+++ b/public/index2.html
@@ -66,8 +66,8 @@
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.min.js"></script>
 <script src="app/app.js"></script>
-<script src="app/controller/CatererListController.js"></script>
-<script src="app/controller/LocationListController.js"></script>
+<script src="app/controller/Caterer.js"></script>
+<script src="app/controller/Location.js"></script>
 
 </body>
 </html>
