--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,9 @@
 <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.min.js"></script>
+<script src="app/controller/Caterer.js"></script>
+<script src="app/controller/Location.js"></script>
 <script src="app/app.js"></script>
-<script src="app/controller/CatererListController.js"></script>
-<script src="app/controller/LocationListController.js"></script>
-<script src="app/controller/LocationCreateController.js"></script>
 
 </body>
 </html>
