--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.min.js"></script>
 <script src="app/controller/Caterer.js"></script>
-<!--<script src="app/controller/Location.js"></script>
-<script src="app/controller/Invitation.js"></script>-->
+<script src="app/controller/Location.js"></script>
+<script src="app/controller/Invitation.js"></script>
 <script src="app/app.js"></script>
 
 </body>
