--- a/public/index-test2.html
+++ b/public/index-test2.html
@@ -20,6 +20,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+
+
 </head>
 
 <body ng-app="EvenTUM">
@@ -37,13 +39,18 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="active"><a href="#">Location</a></li>
+                <li><a href="#">Caterer</a></li>
+                <li><a href="#">Invitation</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
+
+
+
+
+
 
 <div class="container" ng-view>
 </div><!-- /.container -->
@@ -56,10 +63,9 @@
 <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.min.js"></script>
+<script src="app/app.js"></script>
 <script src="app/controller/Caterer.js"></script>
 <script src="app/controller/Location.js"></script>
-<script src="app/controller/Invitation.js"></script>
-<script src="app/app.js"></script>
 
 </body>
 </html>
