--- a/public/index-test1.html
+++ b/public/index-test1.html
@@ -45,13 +45,9 @@
 
 
 
-<div style="background-color:#222222; ">
-    <center>
-        <h4>
-            <font color = "#cccccc">The momentum of Events</font>
-        </h4>
-        <img align ="middle" src="https://pixabay.com/static/uploads/photo/2015/05/29/19/18/crowd-789652_960_720.jpg" width="450" height="200"/>
-    </center>
+<div >
+    <img id="png1" align ="middle"  onclick="this.style.display='none';"
+         src="http://s33.postimg.org/4we26txov/crowd.jpg" width=100% height=100%/>
 </div>
 
 <div class="container" ng-view>
