--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <div class ="image">
-        <img align ="middle"  onclick="this.style.display='none';"
-             src="http://s33.postimg.org/4we26txov/crowd.jpg" width=100% height=100%/>
-    </div>
-
     <title>EvenTUM</title>
 
     <!-- Bootstrap core CSS -->
@@ -33,13 +28,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">EvenTUM</a>
+            <a class="navbar-brand" href="index-startpage.html">EvenTUM</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="active"><a href="#">Caterer</a></li>
+                <li><a href="#">Location</a></li>
+                <li><a href="#">Invitation</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -52,6 +47,9 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+
+
+
 <script src="lib/jquery/dist/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
 <script src="lib/angular.min.js"></script>
