--- a/public/index-startpage.html
+++ b/public/index-startpage.html
@@ -50,7 +50,8 @@
 				<hr>
 				<h5>The all-in-one solution for event-planning</h5>
 				<hr>
-				<a href="index.html" class="btn btn-default">Create your Event</a>
+				<a href="index.html" class="btn btn-default">Insert Offer</a>
+				<a href="" class="btn btn-default">Create Event</a>
 			</div>
 		</div>
 	</div>		
