added buttons delete / edit for caterer addad image upload for caterer

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Caterer</a></li>
-                <li><a href="#">Location</a></li>
-                <li><a href="#">Invitation</a></li>
+                <li><a href="#/Caterer">Caterer</a></li>
+                <li><a href="#/Location">Location</a></li>
+                <li><a href="#/Invitation">Invitation</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
