--- a/public/index-startpage.html
+++ b/public/index-startpage.html
@@ -23,14 +23,15 @@
 <!-- navigation section (not needed yet)-->
 <section class="navbar navbar-fixed-top custom-navbar" >
 	<div class="container">
-		<!--<div class="navbar-header">
+		<div class="navbar-header">
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
 
-		</div>-->
+		</div>
+
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="" class="smoothScroll">Register</a></li>
