correct Link fo Offers created

--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,6 @@
     <script src="app/controller/Location.js"></script>
     <script src="app/controller/Invitation.js"></script>
     <script src="app/controller/Home.js"></script>
+    <script src="app/controller/Offer.js"></script>
     <script src="app/app.js"></script>
 </html>
