--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
         </nav>
         <div class="container" ng-view></div>
         <div id="footer">
-            &copy; EvenTUM 2016
+            <br>
+            <center>&copy; EvenTUM 2016</center>
         </div>
     </body>
     <script src="lib/jquery/dist/jquery.min.js"></script>
