--- a/public/index.html
+++ b/public/index.html
@@ -27,23 +27,22 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#"><img src="" alt="LOGO"></a>
-                    <p class="navbar-brand">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, porro.</p>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="">login</a></li>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="btn btn-success navbar-btn" href="">login</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
-        <div class="container" ng-view></div>
+        <div ng-view></div>
         <div id="footer">
-            <br>
-            <center>&copy; EvenTUM 2016</center>
+            &copy; EvenTUM 2016
         </div>
     </body>
-    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-route.min.js"></script>
     <script src="app/controller/Caterer.js"></script>
