delete now correctly displays the removed entry

--- a/public/deine_mudda_index.html
+++ b/public/deine_mudda_index.html
@@ -128,9 +128,9 @@
                     <div class="dropdown">
                         <button onclick="myFunction()" class="dropbtn">Insert Offer</button>
                         <div id="myDropdown" class="dropdown-content">
-                            <a href="#home">Caterer</a>
-                            <a href="#about">Location</a>
-                            <a href="#contact">Invitation</a>
+                            <a href="#/Caterers">Caterer</a>
+                            <a href="#/Locations">Location</a>
+                            <a href="#/Invitation">Invitation</a>
                         </div>
                     </div>
 
