implemented create.event created new tables for create.event updated several things forgot the rest....

--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,6 @@
     <script src="app/controller/Invitation.js"></script>
     <script src="app/controller/Home.js"></script>
     <script src="app/controller/Offer.js"></script>
+    <script src="app/controller/Event.js"></script>
     <script src="app/app.js"></script>
 </html>
