--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="btn btn-success navbar-btn" href="">login</a></li>
+                        <li><a class="btn btn-success navbar-btn" data-toggle="modal" data-target="#login-modal" href="">Login</a></li>
+                        <li><a class="btn btn-success navbar-btn" data-toggle="modal" data-target="#register-modal" href="">Register</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -40,11 +41,14 @@
             &copy; EvenTUM 2016
         </div>
     </body>
-
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-route.min.js"></script>
+    <script src="app/core/auth-service.js"></script>
+    <script src="app/core/user-service.js"></script>
+    <script src="app/core/directives.js"></script>
     <script src="app/controller/Caterer.js"></script>
     <script src="app/controller/Location.js"></script>
     <script src="app/controller/Invitation.js"></script>
