--- a/public/index.html
+++ b/public/index.html
@@ -16,44 +16,36 @@
         <!-- Custom styles for this template -->
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body ng-app="EvenTUM">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"><img src="" alt="LOGO"></a>
-                </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a class="btn btn-success navbar-btn" data-toggle="modal" data-target="#login-modal" href="">Login</a></li>
-                        <li><a class="btn btn-success navbar-btn" data-toggle="modal" data-target="#register-modal" href="">Register</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div>
-        </nav>
+    <body ng-app="EvenTUM" ng-controller="UserCtrl">
+        <navbar></navbar>
         <div ng-view></div>
         <div id="footer">
             &copy; EvenTUM 2016
         </div>
+
+        <!-- vendor files -->
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
+        <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="lib/angular.min.js"></script>
+        <script src="lib/angular-route.min.js"></script>
+
+        <!-- core files -->
+        <script src="app/core/auth-service.js"></script>
+        <script src="app/core/user-service.js"></script>
+        <script src="app/core/directives.js"></script>
+
+        <!-- controller files -->
+        <script src="app/controller/User.js"></script>
+        <script src="app/controller/Caterer.js"></script>
+        <script src="app/controller/Location.js"></script>
+        <script src="app/controller/Invitation.js"></script>
+        <script src="app/controller/Home.js"></script>
+        <script src="app/controller/Offer.js"></script>
+        <script src="app/controller/Event.js"></script>
+
+        <!-- app.js -->
+        <script src="app/app.js"></script>
+
     </body>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="lib/jquery/dist/jquery.min.js"><\/script>')</script>
-    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="lib/angular.min.js"></script>
-    <script src="lib/angular-route.min.js"></script>
-    <script src="app/core/auth-service.js"></script>
-    <script src="app/core/user-service.js"></script>
-    <script src="app/core/directives.js"></script>
-    <script src="app/controller/Caterer.js"></script>
-    <script src="app/controller/Location.js"></script>
-    <script src="app/controller/Invitation.js"></script>
-    <script src="app/controller/Home.js"></script>
-    <script src="app/controller/Offer.js"></script>
-    <script src="app/controller/Event.js"></script>
-    <script src="app/app.js"></script>
 </html>
