Clean Up: renamed /app to /old-app-reference for looking up old functionalities

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <script src="app/controller/Offer.js"></script>
         <script src="app/controller/Event.js"></script>
 
-        <!-- app.js -->
+        <!-- old-app-refernece.js -->
         <script src="app/app.js"></script>
 
     </body>
