added testDataService for reading test files before backend routes exist.

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,13 @@
         <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
+        <script src="lib/angular-resource.min.js"></script>
 
         <!-- core files -->
         <script src="app/core/auth-service.js"></script>
         <script src="app/core/user-service.js"></script>
         <script src="app/core/directives.js"></script>
+        <script src="app/core/test-data-service.js"></script>
 
         <!-- controller files -->
         <script src="app/controller/User.js"></script>
