--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         <script src="app/core/auth-service.js"></script>
         <script src="app/core/user-service.js"></script>
         <script src="app/core/directives.js"></script>
+        <script src="app/core/data-service.js"></script>
         <script src="app/core/test-data-service.js"></script>
 
         <!-- controller files -->
