update google api

--- a/public/googlemaps.html
+++ b/public/googlemaps.html
@@ -12,13 +12,19 @@
 <script type="text/javascript">
     var locations = [
         ['Andi', 48.2519230, 11.6680880],
-        ['Pat', 48.2621140, 11.6680990],
-        ['Flo ', 48.2722350, 11.6681100],
+        ['Party', 48.2621140, 11.6780990],
+        ['Penner', 48.2621140, 11.6680990],
+        ['Pat', 48.2621140, 11.6480990],
+        ['Pussy', 48.2621140, 11.6580990],
+        ['Flo ', 48.2722350, 11.6781100],
+        ['Fluch ', 48.2722350, 11.6881100],
+        ['Fotze ', 48.2722350, 11.6581100],
+        ['Fehler ', 48.2722350, 11.6481100],
     ];
 
     var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 10,
-        center: new google.maps.LatLng(48.2620140, 11.6680980),
+        zoom: 12,
+        center: new google.maps.LatLng(48.135125, 11.581981),
         mapTypeId: google.maps.MapTypeId.ROADMAP
     });
 
