directory names refactored ng-binding in event-detail.html

--- a/public/googlemaps.html
+++ b/public/googlemaps.html
@@ -72,7 +72,7 @@
         });
 
         markers.push(marker);
-        //TODO add infobox with Location.name & Location.description along a button with ng-onclick "select as location" functionality
+        //TODO add infobox with location.name & location.description along a button with ng-onclick "select as location" functionality
 
 
     })
