created module Helper added LocationFactory to Helper completed event functionality

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         <script src="lib/angular-resource.min.js"></script>
 
         <!-- core files -->
+        <script src="app/core/helper.js"></script>
         <script src="app/core/auth-service.js"></script>
         <script src="app/core/user-service.js"></script>
         <script src="app/core/directives.js"></script>
