--- a/public/googlemaps.html
+++ b/public/googlemaps.html
@@ -53,8 +53,7 @@
     //NEW FUNCTIONALITY
 
     //dummy location for testing TODO $http get location or $scope.Locations
-    var Locations=[{"name":"test","latitude": "48.2621140","longitude": "11.6280990"},{"name":"testikel","latitude": "48.2721140","longitude": "11.6180990"}];
-
+    var Locations=$scope.locations;
 
 
     console.log(Locations.length);
@@ -75,7 +74,52 @@
         //TODO add infobox with location.name & location.description along a button with ng-onclick "select as location" functionality
 
 
-    })
+
+
+        function MapCtrl ($scope, $routeParams, DataService) {
+
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 12,
+                center: new google.maps.LatLng(48.135125, 11.581981),
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            });
+
+            var geocoder = new google.maps.Geocoder();
+
+            //var infowindow = new google.maps.InfoWindow();
+            var service = new google.maps.places.PlacesService(map);
+
+            var Locations = $scope.locations;
+            var markers = [];
+
+
+            //to be used with real Locations straight from the API
+            Locations.forEach(function (element) {
+
+                var request = "{ placeId: '" + element.place_id + "'}";
+                console.log(request);
+
+                service.getDetails(request, function (place, status) {
+                    if (status == google.maps.places.PlacesServiceStatus.OK) {
+
+                        var marker = new google.maps.Marker({
+                            map: map,
+                            position: place.geometry.location
+
+                            //more
+                        });
+                        markers.push(marker);
+                    }
+
+                });
+
+
+            })
+            //google.maps.event.addDomListener(window, 'load', initialize);
+
+
+        }
+        })
 </script>
 </body>
 </html>
