--- a/public/index.html
+++ b/public/index.html
@@ -56,5 +56,12 @@
         <!-- old-app-refernece.js -->
         <script src="app/app.js"></script>
 
+        <!-- Google Map API-->
+        <script src="https://code.angularjs.org/1.3.14/angular.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+        <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAwiRKZi_n0udwuP4Ef01c19tP_Tf9r28o&sensor=false&extension=.js"></script>
+        <script src="http://rawgit.com/angular-ui/angular-google-maps/2.0.X/dist/angular-google-maps.js"></script>
+
+
     </body>
 </html>
